--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,22 @@
+__pycache__
 DataAcquisition/logs
 DataAcquisition/draft
 *.txt
 *.o
 *.json
 *.exe
+*.gz
+*.zip
+*.docx
+.env*
 Algorithm/*
 !Algorithm/requirements.txt
 !Algorithm/tasks.py
 !Algorithm/celeryconfig.py
 !Algorithm/alert_count_sql.py
+!Algorithm/Decoupling
+!Algorithm/Decoupling/Mechanism/readme.txt
+dump/
 Digital_Twin_Vue-master/
 mock/
+requirements.in
