--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,11 @@
-__pycache__
-DataAcquisition/logs
-DataAcquisition/draft
-*.txt
-*.o
-*.json
-*.exe
-*.gz
-*.zip
-*.docx
-.env*
-Algorithm/*
+*
+!README.md
+
 !Algorithm/requirements.txt
 !Algorithm/tasks.py
 !Algorithm/celeryconfig.py
 !Algorithm/alert_count_sql.py
-!Algorithm/Decoupling
-!Algorithm/Decoupling/Mechanism/readme.txt
-dump/
-Digital_Twin_Vue-master/
-mock/
-requirements.in
+
+!DataAcquisition/*.c
+!DataAcquisition/*.cpp
+!DataAcquisition/*.h
